crates/hir-ty/tests/snapshots/body_types_snapshots__new_array_initializer.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    int[] newArray() {
        int[] a = new int[] { 1, 2, 3 };
        String[] b = new String[] { "x", "y" };
        int[][] c = new int[][] { { 1 }, { 2, 3 } };
        int[] d = new int[3];
        return a;
    }
}

method newArray(): int[]
  locals: l0: int[] | l1: java.lang.String[] | l2: int[][] | l3: int[]
  exprs: e0: int | e1: int | e2: int | e3: int[] | e4: java.lang.String | e5: java.lang.String | e6: java.lang.String[] | e7: int | e8: int[] | e9: int | e10: int | e11: int[] | e12: int[][] | e13: int | e14: int[] | e15: int[]
