crates/hir-ty/tests/snapshots/body_types_snapshots__overload_by_target.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.Collections;
import java.util.List;

class Body {
    void take(List<String> xs) {}
    void take(Object o) {}

    void call() {
        take(Collections.emptyList());
        take(new Object());
    }
}

method take(java.util.List<java.lang.String>): void
  locals: l0: java.util.List<java.lang.String>
  exprs: 
method take(java.lang.Object): void
  locals: l1: java.lang.Object
  exprs: 
method call(): void
  locals: 
  exprs: e1: java.util.List<java.lang.Object> | e2: void | e3: java.lang.Object | e4: void
