crates/hir-ty/tests/snapshots/body_types_snapshots__poly_conditional_invocation.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.Collections;
import java.util.List;

class Body {
    void take(List<String> xs) {}

    void call(boolean flag) {
        take(flag ? Collections.emptyList() : Collections.emptyList());
    }
}

method take(java.util.List<java.lang.String>): void
  locals: l0: java.util.List<java.lang.String>
  exprs: 
method call(boolean): void
  locals: l1: boolean
  exprs: e0: boolean | e2: java.util.List<java.lang.String> | e4: java.util.List<java.lang.String> | e5: java.util.List<java.lang.String> | e6: void
