crates/hir-ty/tests/snapshots/body_types_snapshots__poly_lambda_in_nested_call.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.function.Function;

class Body {
    void use(Function<String, Integer> f) {}

    <T> T id(T x) {
        return x;
    }

    void call() {
        use(id(s -> s.length()));
    }
}

method use(java.util.function.Function<java.lang.String, java.lang.Integer>): void
  locals: l0: java.util.function.Function<java.lang.String, java.lang.Integer>
  exprs: 
method id(T): T
  locals: l1: T
  exprs: e0: T
method call(): void
  locals: 
  exprs: e1: java.lang.String | e2: int | e3: java.util.function.Function<java.lang.String, java.lang.Integer> | e4: java.util.function.Function<java.lang.String, java.lang.Integer> | e5: void
