crates/hir-ty/tests/snapshots/body_types_snapshots__protected_receiver_rule.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/A.java:
package com.example;

public class A {
    protected void pro() {}
}

FILE /src/org/other/C.java:
package org.other;

class C extends com.example.A {
    com.example.A a = new com.example.A();
    C c = new C();

    void use() {
        a.pro();
        c.pro();
        super.pro();
        pro();
    }
}

method pro(): void
  locals: 
  exprs: 
field a
  locals: 
  exprs: e0: com.example.A
field c
  locals: 
  exprs: e1: org.other.C
method use(): void
  locals: 
  exprs: e2: com.example.A | e3: <error> | e4: org.other.C | e5: void | e7: void | e8: void
  diags: e3@7:10: no-such-method: Cannot resolve method 'pro()'
