crates/hir-ty/tests/snapshots/body_types_snapshots__static_import.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
assertion_line: 1006
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import static java.lang.Math.max;
import static java.lang.Math.*;

class Body {
    int use() {
        return max(1, 2) + min(3, 4);
    }
}

method use(): int
  locals: 
  exprs: e0: int | e1: int | e2: int | e3: int | e4: int | e5: int | e6: int
